resolvendo imports e erros residuais de escrita